--- a/html/main.html
+++ b/html/main.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Index Page</title>
+  <title>Main Page</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"></script>
 </head>
 <body>
   <div class="container">
-    <h1>Welcome to the Game!</h1>
-    <p>Please choose an option:</p>
-    <a href="signup.html" class="btn btn-primary">Sign Up</a>
-    <a href="login.html" class="btn btn-primary">Login</a>
+    <h1>Hello, <span id="userName"></span>!</h1>
+
+    <button id="logoutButton" class="btn btn-primary">Logout</button>
   </div>
+
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
